fix: remove padding causing activity to not be visible

--- a/src/main/resources/styles/application.css
+++ b/src/main/resources/styles/application.css
@@ -82,11 +82,9 @@
   -fx-padding: 20px 0 20px 20px;
 }
 
-/* Modern Table Rows */
 .table-row-cell {
   -fx-background-color: white;
   -fx-table-cell-border-color: transparent;
-  -fx-padding: 10px 0;
 }
 
 .table-row-cell:odd {
@@ -96,7 +94,6 @@
 .table-row-cell:selected {
   -fx-background-color: derive(-fx-primary, 90%);
   -fx-table-cell-border-color: transparent;
-  -fx-text-fill: #212529;
 }
 
 .table-row-cell:filled > .table-cell {
@@ -106,7 +103,7 @@
 .table-view .table-cell {
   -fx-alignment: center-left;
   -fx-padding: 16px 20px;
-  -fx-text-fill: -fx-text-primary;
+  -fx-text-fill: black;
   -fx-font-size: 13px;
 }
 
